Menu categories alignment fixed

--- a/css/main.css
+++ b/css/main.css
@@ -1199,7 +1199,7 @@ a.new-food-name:hover{
 }
 
 .menu-categories-list > li:nth-last-of-type(2),
-.menu-categories-list > li:nth-last-of-type(3){
+.menu-categories-list > li:nth-last-of-type(3):not(:nth-of-type(3)){
 	margin: 0 26px 0 0;
 }
 
